# rust_math

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  fmt-pull-request.yml  fmt-push.yml
src/: derivatives.rs  integrals.rs  lib.rs  main.rs  utils.rs
src/utils/: colours.rs
