[package]
name = "rust_math"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0" # For terminal input/output manipulation

[lib]
name = "rust_math_lib"
path = "src/lib.rs"
# crate-type = ["cdylib"] # To create a dynamic library

[[bin]]
name = "rust_math_bin"
path = "src/main.rs"
